cabal-version:       2.4
name:                same-named-modules
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Jan HrÄek
maintainer:          honza.hrk@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable exe1
  main-is:             Main.hs
  other-modules:       Other
  hs-source-dirs:      exe1
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010
  ghc-options:         -fwrite-ide-info

executable exe2
  main-is:             Main.hs
  other-modules:       Other
  hs-source-dirs:      exe2
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010
  ghc-options:         -fwrite-ide-info